@@ -8,13 +8,11 @@
  * Contributors:
  *     QNX Software Systems - Initial API and implementation
  *******************************************************************************/
-
 package org.eclipse.cdt.debug.internal.core;
 
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
-
 import org.eclipse.cdt.debug.core.CDebugCorePlugin;
 import org.eclipse.cdt.debug.core.ICDebugConstants;
 import org.eclipse.cdt.debug.core.ICRegisterManager;
@@ -23,34 +21,36 @@ import org.eclipse.cdt.debug.core.cdi.ICDIManager;
 import org.eclipse.cdt.debug.core.cdi.model.ICDIRegisterObject;
 import org.eclipse.cdt.debug.internal.core.model.CDebugTarget;
 import org.eclipse.cdt.debug.internal.core.model.CRegisterGroup;
+import org.eclipse.cdt.debug.internal.core.model.CStackFrame;
 import org.eclipse.debug.core.DebugException;
 import org.eclipse.debug.core.model.IRegisterGroup;
 
 /**
- * Enter type comment.
- * 
- * @since Mar 31, 2003
+ * Manages all register groups in a debug target.
  */
-public class CRegisterManager extends CUpdateManager implements ICRegisterManager
-{
+public class CRegisterManager extends CUpdateManager implements ICRegisterManager {
+
 	/**
 	 * Collection of register groups added to this target. Values are of type <code>CRegisterGroup</code>.
 	 */
 	private List fRegisterGroups;
 
 	/**
-	 * 
+	 * The last stack frame.
 	 */
-	public CRegisterManager( CDebugTarget target )
-	{
+	private CStackFrame fStackFrame;
+
+	/** 
+	 * Constructor for CRegisterManager. 
+	 */
+	public CRegisterManager( CDebugTarget target ) {
 		super( target );
 	}
 
 	/* (non-Javadoc)
 	 * @see org.eclipse.core.runtime.IAdaptable#getAdapter(java.lang.Class)
 	 */
-	public Object getAdapter( Class adapter )
-	{
+	public Object getAdapter( Class adapter ) {
 		if ( ICRegisterManager.class.equals( adapter ) )
 			return this;
 		if ( CRegisterManager.class.equals( adapter ) )
@@ -58,11 +58,8 @@ public class CRegisterManager extends CUpdateManager implements ICRegisterManage
 		return super.getAdapter( adapter );
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.cdt.debug.core.ICRegisterManager#dispose()
-	 */
-	public void dispose()
-	{
+	public void dispose() {
+		setStackFrame( null );
 		removeAllRegisterGroups();
 		super.dispose();
 	}
@@ -70,25 +67,16 @@ public class CRegisterManager extends CUpdateManager implements ICRegisterManage
 	/* (non-Javadoc)
 	 * @see org.eclipse.cdt.debug.core.ICRegisterManager#addRegisterGroup(org.eclipse.debug.core.model.IRegisterGroup)
 	 */
-	public void addRegisterGroup( IRegisterGroup group )
-	{
+	public void addRegisterGroup( IRegisterGroup group ) {
 		// TODO Auto-generated method stub
-
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.cdt.debug.core.ICRegisterManager#getRegisterGroups()
-	 */
-	public IRegisterGroup[] getRegisterGroups() throws DebugException
-	{
+	public IRegisterGroup[] getRegisterGroups( CStackFrame frame ) throws DebugException {
+		setStackFrame( frame );
 		return (IRegisterGroup[])fRegisterGroups.toArray( new IRegisterGroup[fRegisterGroups.size()] );
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.cdt.debug.core.ICRegisterManager#initialize()
-	 */
-	public void initialize()
-	{
+	public void initialize() {
 		fRegisterGroups = new ArrayList( 20 );
 		boolean autoRefresh = CDebugCorePlugin.getDefault().getPluginPreferences().getBoolean( ICDebugConstants.PREF_REGISTERS_AUTO_REFRESH );
 		if ( getCDIManager() != null )
@@ -99,11 +87,9 @@ public class CRegisterManager extends CUpdateManager implements ICRegisterManage
 	/* (non-Javadoc)
 	 * @see org.eclipse.cdt.debug.core.ICRegisterManager#removeAllRegisterGroups()
 	 */
-	public void removeAllRegisterGroups()
-	{
+	public void removeAllRegisterGroups() {
 		Iterator it = fRegisterGroups.iterator();
-		while( it.hasNext() )
-		{
+		while( it.hasNext() ) {
 			((CRegisterGroup)it.next()).dispose();
 		}
 		fRegisterGroups.clear();
@@ -112,44 +98,25 @@ public class CRegisterManager extends CUpdateManager implements ICRegisterManage
 	/* (non-Javadoc)
 	 * @see org.eclipse.cdt.debug.core.ICRegisterManager#removeRegisterGroup(org.eclipse.debug.core.model.IRegisterGroup)
 	 */
-	public void removeRegisterGroup( IRegisterGroup group )
-	{
+	public void removeRegisterGroup( IRegisterGroup group ) {
 		fRegisterGroups.remove( group );
 	}
 
-	private void createMainRegisterGroup()
-	{
+	private void createMainRegisterGroup() {
 		ICDIRegisterObject[] regObjects = null;
-		try
-		{
+		try {
 			regObjects = getDebugTarget().getCDISession().getRegisterManager().getRegisterObjects();
 		}
-		catch( CDIException e )
-		{
+		catch( CDIException e ) {
 			CDebugCorePlugin.log( e );
 		}
-		if ( regObjects != null )
-		{
+		if ( regObjects != null ) {
 			fRegisterGroups.add( new CRegisterGroup( getDebugTarget(), "Main", regObjects ) ); //$NON-NLS-1$
 		}
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.cdt.debug.core.ICRegisterManager#reset()
-	 */
-	public void reset()
-	{
-		Iterator it = fRegisterGroups.iterator();
-		while( it.hasNext() )
-		{
-			((CRegisterGroup)it.next()).resetChangeFlags();
-		}
-	}
-
-	protected ICDIManager getCDIManager()
-	{
-		if ( getDebugTarget() != null )
-		{
+	protected ICDIManager getCDIManager() {
+		if ( getDebugTarget() != null ) {
 			return getDebugTarget().getCDISession().getRegisterManager();
 		}
 		return null;
@@ -160,5 +127,13 @@ public class CRegisterManager extends CUpdateManager implements ICRegisterManage
 		while( it.hasNext() ) {
 			((CRegisterGroup)it.next()).targetSuspended();
 		}
+	}
+
+	public CStackFrame getStackFrame() {
+		return fStackFrame;
+	}
+
+	private void setStackFrame( CStackFrame stackFrame ) {
+		fStackFrame = stackFrame;
 	}
 }
